[package]
name = "things"
version = "0.1.0"
authors = ["Timothy Andrew <mail@timothyandrew.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.11"
urlencoding = "1.1.1"