[package]
name = "things"
version = "0.1.0"
authors = ["Timothy Andrew <mail@timothyandrew.net>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.11", features = ["wasmbind", "js-sys"] }
urlencoding = "1.1.1"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2"